# Backend/app/models/DoctorModel.js
@@ -39,6 +39,10 @@ const doctorSchema = new mongoose.Schema(
       type: Number,
       default: 0,
     },
+    profileImage:{
+      type:String,
+      required:true
+    }
   },
   { timestamps: true }
 );
